--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ImbaAlarm"
+        android:theme="@style/Theme.Material3.Dark.NoActionBar"
         tools:targetApi="31" >
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
             android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.SCREEN_OFF" />
+                <action android:name="android.intent.action.SCREEN_ON" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+
+
+                <category android:name="android.intent.category.DEFAULT"></category>
+            </intent-filter>
         </receiver>
 
         <activity
